[gd_scene load_steps=19 format=3 uid="uid://dwuk01hjwntqr"]

[ext_resource type="Texture2D" uid="uid://cefe64xeaoyjq" path="res://sprites/backroundGame/directorOfice.jpg" id="1_g1lsw"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_qbvbt"]
[ext_resource type="Script" path="res://scenes/GameManager.gd" id="2_ho215"]
[ext_resource type="Texture2D" uid="uid://d3etyn4h4ijaf" path="res://sprites/director/smile.png" id="2_yw4np"]
[ext_resource type="Texture2D" uid="uid://bochhm60qntby" path="res://sprites/director/sad.png" id="3_vf4bf"]
[ext_resource type="Texture2D" uid="uid://bmlvvdfgvvjwe" path="res://sprites/director/delighted.png" id="4_o52xh"]
[ext_resource type="Texture2D" uid="uid://e1uo4r7m4v24" path="res://sprites/director/normal.png" id="5_1tsee"]
[ext_resource type="Texture2D" uid="uid://d1bawn7y5tvwc" path="res://sprites/director/shocked.png" id="6_l64rx"]
[ext_resource type="PackedScene" uid="uid://ta72r6k4eky2" path="res://scenes/dialog.tscn" id="8_iabpq"]
[ext_resource type="PackedScene" uid="uid://dhhehhu2lhap7" path="res://scenes/score_bar.tscn" id="10_j04os"]
[ext_resource type="PackedScene" uid="uid://dbey54dwl1ptv" path="res://scenes/game_pause.tscn" id="11_xmyny"]
[ext_resource type="PackedScene" uid="uid://crv5qwr6fkg5h" path="res://scenes/start_hint_for_game.tscn" id="12_ahadn"]

[sub_resource type="Animation" id="Animation_m8kgp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whitePhone:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u3iy8"]
resource_name = "animDesapiarPhone"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whitePhone:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4t0i"]
_data = {
"RESET": SubResource("Animation_m8kgp"),
"animDesapiarPhone": SubResource("Animation_u3iy8")
}

[sub_resource type="Animation" id="Animation_kas6b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whitePhone:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eberh"]
resource_name = "apairPhone"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("whitePhone:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y61sf"]
_data = {
"RESET": SubResource("Animation_kas6b"),
"apairPhone": SubResource("Animation_eberh")
}

[node name="Game" type="CanvasLayer"]
script = ExtResource("1_qbvbt")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_ho215")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_g1lsw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Director" type="StaticBody2D" parent="VBoxContainer"]
scale = Vector2(0.7, 0.7)

[node name="smile" type="Sprite2D" parent="VBoxContainer/Director"]
position = Vector2(0, -640)
texture = ExtResource("2_yw4np")

[node name="sad" type="Sprite2D" parent="VBoxContainer/Director"]
visible = false
position = Vector2(0, -640)
texture = ExtResource("3_vf4bf")

[node name="delighted" type="Sprite2D" parent="VBoxContainer/Director"]
visible = false
position = Vector2(0, -640)
texture = ExtResource("4_o52xh")

[node name="normal" type="Sprite2D" parent="VBoxContainer/Director"]
visible = false
position = Vector2(0, -640)
texture = ExtResource("5_1tsee")

[node name="shocked" type="Sprite2D" parent="VBoxContainer/Director"]
visible = false
position = Vector2(0, -640)
texture = ExtResource("6_l64rx")

[node name="dialog" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreBar" parent="." instance=ExtResource("10_j04os")]

[node name="whitePhone" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="DesapiarPhone" type="AnimationPlayer" parent="."]
autoplay = "animDesapiarPhone"
libraries = {
"": SubResource("AnimationLibrary_c4t0i")
}

[node name="dialog" parent="." instance=ExtResource("8_iabpq")]

[node name="ApiarPhone" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y61sf")
}

[node name="EndGame" type="Timer" parent="."]
wait_time = 2.0

[node name="GamePause" parent="." instance=ExtResource("11_xmyny")]

[node name="TimerForReaction" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="StartHintForGame" parent="." instance=ExtResource("12_ahadn")]
visible = false

[connection signal="timeout" from="EndGame" to="." method="_on_end_game_timeout"]
[connection signal="timeout" from="TimerForReaction" to="GameManager" method="_on_timer_for_reaction_timeout"]
